--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <!-- Ticket pricing section -->
 
-      <section class="my-20 pb-20 bg-[#F7F8F8FF] border-t-2 border-t-[#1DD100FF] rounded-4xl">
+      <section class="mt-20 pb-20 bg-[#F7F8F8FF] border-t-2 border-t-[#1DD100FF] rounded-t-4xl">
         <div class="text-center my-10">
           <h2 class="text-3xl font-bold mb-5">P.H Paribahan</h2>
           <p class="max-w-2xl m-auto">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
@@ -262,6 +262,31 @@
       <!-- Selecting and Billing Section -->
       
     </main>
-    <footer></footer>
+    <footer class="bg-black text-white">
+      <div class="flex justify-between max-w-4xl mx-auto pt-20 pb-10 border-b-2">
+        <div>
+          <h3>P-Ticket</h3>
+          <p>P-Ticket is a digital platform to make your daily commuting better.</p>
+        </div>
+        <div>
+          <p>Download our app</p>
+          <div class="flex gap-2 mt-5 border-1 rounded-lg p-2">
+            <img src="/images/playstore.png" alt="">
+            <div class="">
+              <p class="text-xs">GET IT ON</p>
+              <p class="text-sm">Google PLay</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-between max-w-4xl mx-auto my-10">
+        <p>@all rights reserved, P-Ticket services limited 2025</p>
+        <div>
+          <a href="#">Terms & condition</a>
+          <a href="#">Return & refund policy</a>
+          <a href="#">Privacy policy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
