addeded success page

--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
                 <br>
                 <label for="number">Phone Number*</label>
                 <br>
-                <input class="w-full border-gray-200 my-2 p-2 rounded-lg shadow" type="number" name="" id="" placeholder="Enter your number">
+                <input class="w-full border-gray-200 my-2 p-2 rounded-lg shadow" type="tel" name="" id="" placeholder="Enter your number">
                 <br>
                 <label for="email">Email ID</label>
                 <br>
                 <input class="w-full border-gray-200 my-2 p-2 rounded-lg shadow" type="email" name="" id="" placeholder="Enter your email id">
                 <br>
-                <input class="w-full bg-[#1DD100FF] text-white p-2 rounded-md mt-5" type="submit" name="" id="" placeholder="Next">
+                <input class="w-full bg-[#1DD100FF] text-white p-2 rounded-md mt-5 cursor-pointer" type="submit" name="" id="" placeholder="Next">
               </form>
             </div>
             <div class="flex justify-between">
@@ -263,14 +263,14 @@
       
     </main>
     <footer class="bg-black text-white">
-      <div class="flex justify-between max-w-4xl mx-auto pt-20 pb-10 border-b-2">
+      <div class="flex justify-between max-w-4xl mx-auto pt-20 pb-10 border-b-1 border-dashed">
         <div>
-          <h3>P-Ticket</h3>
-          <p>P-Ticket is a digital platform to make your daily commuting better.</p>
+          <h3 class="text-2xl font-bold mb-2">P-Ticket</h3>
+          <p class="text-sm max-w-xs">P-Ticket is a digital platform to make your daily commuting better.</p>
         </div>
         <div>
-          <p>Download our app</p>
-          <div class="flex gap-2 mt-5 border-1 rounded-lg p-2">
+          <p class="text-sm">Download our app</p>
+          <div class="flex gap-2 mt-2 border-1 rounded-lg p-2 cursor-pointer">
             <img src="/images/playstore.png" alt="">
             <div class="">
               <p class="text-xs">GET IT ON</p>
@@ -279,9 +279,9 @@
           </div>
         </div>
       </div>
-      <div class="flex justify-between max-w-4xl mx-auto my-10">
-        <p>@all rights reserved, P-Ticket services limited 2025</p>
-        <div>
+      <div class="flex justify-between max-w-4xl mx-auto mt-10 pb-10">
+        <a class="text-xs" href="#">@all rights reserved, P-Ticket services limited 2025</a>
+        <div class="text-sm flex gap-5">
           <a href="#">Terms & condition</a>
           <a href="#">Return & refund policy</a>
           <a href="#">Privacy policy</a>
