--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                   <p>Departure Time</p>
                   <p>9:00 PM</p>
                 </div>
-                <div class="flex shrink gap-2 mt-5">
-                  <p class="btn">Boarding Point- Laxmipur</p>
-                  <p class="btn">Dropping Point- Bogura</p>
-                  <p class="btn">Est Time- 11 Hour</p>
+                <div class="flex gap-2 mt-5 max-w-2xl">
+                  <p class="bg-[#0307120D] py-3 px-2 rounded-lg">Boarding Point- Laxmipur</p>
+                  <p class="bg-[#0307120D] py-3 px-2 rounded-lg">Dropping Point- Bogura</p>
+                  <p class="bg-[#0307120D] py-3 px-2 rounded-lg">Est Time- 11 Hour</p>
                 </div>
               </div>
             </div>
